--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+  "object-curly-spacing": [1, "always"],
+  "@typescript-eslint/no-explicit-any": 1
+  }
 }
