feat: Handle modal with nicemodal

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ebay/nice-modal-react": "^1.2.13",
     "@next/eslint-plugin-next": "^15.1.2",
     "@tanstack/react-query": "^5.62.8",
     "dotenv": "^16.4.7",
