--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.14.0"
   },
   "devDependencies": {
     "@types/node": "^20",
